--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 spring.freemarker.template-loader-path=classpath:/templates
 spring.freemarker.suffix=.ftl
 
+uploadPath=C:\\git\\123
 # Show or not log for each sql query
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
