--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 
-spring.freemarker.template-loader-path=classpath:/templates
+spring.freemarker.template-loader-path=classpath:/templates/freemarker
 spring.freemarker.suffix=.ftl
 
 uploadPath=C:\\git\\123
