--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <freemarker.version>2.3.31</freemarker.version>
         <postgresql.version>42.3.4</postgresql.version>
         <spring-boot.version>2.7.0</spring-boot.version>
+        <spring-boot-maven.version>2.7.0</spring-boot-maven.version>
         <lombok.version>1.18.24</lombok.version>
     </properties>
     <dependencies>
@@ -56,6 +57,12 @@
             <version>${spring-boot.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>${spring-boot.version}</version>
+            <scope>compile</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -69,11 +76,6 @@
             <version>${lombok.version}</version>
             <scope>compile</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.freemarker</groupId>-->
-<!--            <artifactId>freemarker</artifactId>-->
-<!--            <version>${freemarker.version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
@@ -111,7 +113,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${spring-boot-maven.version}</version>
             </plugin>
         </plugins>
     </build>
