--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.freemarker.suffix=.ftl
 
 uploadPath=C:\\git\\123
 # Show or not log for each sql query
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 
 #server.port=9091
