--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 
 spring.freemarker.template-loader-path=classpath:/templates/freemarker
 spring.freemarker.suffix=.ftl
+#spring.freemarker.cache=true
+spring.messages.encoding=UTF-8
 
 uploadPath=C:\\git\\123
 # Show or not log for each sql query
