--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <postgresql.version>42.3.4</postgresql.version>
         <spring-boot.version>2.7.0</spring-boot.version>
         <spring-boot-maven.version>2.7.0</spring-boot-maven.version>
+        <spring-boot-mail.version>2.6.8</spring-boot-mail.version>
         <lombok.version>1.18.24</lombok.version>
     </properties>
     <dependencies>
@@ -65,6 +66,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>${spring-boot-mail.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring-boot.version}</version>
             <scope>test</scope>
@@ -88,6 +95,7 @@
             <version>${lombok.version}</version>
             <scope>compile</scope>
         </dependency>
+        
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
