--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-# Connection url for the database
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=psql
@@ -9,10 +8,18 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 
 spring.freemarker.template-loader-path=classpath:/templates/freemarker
 spring.freemarker.suffix=.ftl
-#spring.freemarker.cache=true
-spring.messages.encoding=UTF-8
 
 uploadPath=C:\\git\\123
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=example@gmail.com
+spring.mail.password=school21
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.allow8bitmime=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.debug=true
+
 # Show or not log for each sql query
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
