--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,35 +1,35 @@
+uploadPath=C:\\git\\123
+spring.freemarker.template-loader-path=classpath:/templates/freemarker
+spring.freemarker.suffix=.ftl
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.SQL=debug
+#hibernate.show_sql=true
+
+####### Data-Source Properties #######
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=psql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+###### JPA Properties ######
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-
-spring.freemarker.template-loader-path=classpath:/templates/freemarker
-spring.freemarker.suffix=.ftl
-
-uploadPath=C:\\git\\123
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=example@gmail.com
-spring.mail.password=school21
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.allow8bitmime=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-spring.mail.properties.mail.debug=true
-
+spring.jpa.hibernate.ddl-auto=create
 # Show or not log for each sql query
 #spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
-
-#server.port=9091
-
-#show sql values
-#logging.level.org.hibernate.type.descriptor.sql=trace
-
-#hibernate.show_sql=true
 #spring.jpa.hibernate.logging.level.sql=FINE
-##show sql statement
-#logging.level.org.hibernate.SQL=debug
+
+###### Email Properties ######
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=somethingthaticantdecide@gmail.com
+spring.mail.password=JTALEXander1231
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.allow8bitmime=true
+#spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+#spring.mail.properties.mail.debug = true
+#spring.mail.properties.mail.smtp.connectiontimeout = 5000
+#spring.mail.properties.mail.smtp.timeout = 5000
+#spring.mail.properties.mail.smtp.writetimeout = 5000
