--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 ###### JPA Properties ######
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 # Show or not log for each sql query
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.logging.level.sql=FINE
@@ -23,7 +23,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=somethingthaticantdecide@gmail.com
-spring.mail.password=JTALEXander1231
+spring.mail.password=qszpwxavastduisl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
