--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.freemarker.suffix=.ftl
 ####### Data-Source Properties #######
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=psql
+spring.datasource.password=pgpwd4habr
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 ###### JPA Properties ######
