--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.freemarker.suffix=.ftl
 ####### Data-Source Properties #######
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=pgpwd4habr
+spring.datasource.password=psql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 ###### JPA Properties ######
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 # Show or not log for each sql query
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.logging.level.sql=FINE
