--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.freemarker.suffix=.ftl
 #logging.level.org.hibernate.type.descriptor.sql=trace
 #logging.level.org.hibernate.SQL=debug
 #hibernate.show_sql=true
+spring.freemarker.charset=UTF-8
 
 ####### Data-Source Properties #######
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
@@ -14,7 +15,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 ###### JPA Properties ######
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 # Show or not log for each sql query
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.logging.level.sql=FINE
