--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 #spring.jpa.hibernate.ddl-auto=create
-# Show or not log for each sql query
+## Show or not log for each sql query
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.logging.level.sql=FINE
 
