--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 ###### JPA Properties ######
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 ## Show or not log for each sql query
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.logging.level.sql=FINE
