--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <spring-boot-maven.version>2.7.0</spring-boot-maven.version>
         <spring-boot-mail.version>2.6.8</spring-boot-mail.version>
         <lombok.version>1.18.24</lombok.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
